--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,7 +3,7 @@
   <h1>
     Welcome to {{ title }}!
   </h1>
-  <a routerLink = "app-pdf-viewer">New component</a>
+  <a routerLink = "app-pdf-viewer">view pdf</a>
 </div>
 
 <router-outlet> </router-outlet>
