--- a/src/styles.css
+++ b/src/styles.css
@@ -1,1 +1,38 @@
 /* You can add global styles to this file, and also import other style files */
+div.pdf-box{
+    border: 2px solid gray;
+    position: relative;
+
+    padding: 10px;
+    margin: 10px;
+    float:left;
+}
+
+h1.pdf-h1{
+ text-align: center;
+ margin: 2px;
+}
+
+
+table.pdf-table{
+    width: 100%;
+    clear: left;
+}
+
+table>th, td{
+    padding: 2px 4px;
+    border-bottom: 1px solid #e2e2e2;
+ }
+ table>thead {
+   border-bottom:1px solid #ddd;
+   background: #cccccc;
+ }
+ table>tr:nth-child(even) td{
+   background-color: #e2e2e2;
+ }
+ .text-center{
+    text-align: center;
+ }
+ .text-left{
+    text-align: right;
+ }
